--- a/21_Day_DOM/21_day_starter/index.html
+++ b/21_Day_DOM/21_day_starter/index.html
@@ -7,17 +7,24 @@
 
 <body>
 	<div class="wrapper">
-		<h1>Asabeneh Yetayeh challenges in 2020</h1>
-		<h2>30DaysOfJavaScript Challenge</h2>
+		<h1>Asabeneh Yetayeh challenges in <span id="year">2020</span></h1>
+		<h2 id="30days">30DaysOfJavaScript Challenge</h2>
+		<div class="date-time"></div>
 		<ul>
-			<li>30DaysOfPython Challenge Done</li>
-			<li>30DaysOfJavaScript Challenge Ongoing</li>
-			<li>30DaysOfReact Challenge Coming</li>
-			<li>30DaysOfFullStack Challenge Coming</li>
-			<li>30DaysOfDataAnalysis Challenge Coming</li>
-			<li>30DaysOfReactNative Challenge Coming</li>
-			<li>30DaysOfMachineLearning Challenge Coming</li>
+			<li id="python" class="completed">30DaysOfPython Challenge Done</li>
+			<li id="javaScript" class="ongoing">30DaysOfJavaScript Challenge Ongoing</li>
+			<li id="react" class="coming">30DaysOfReact Challenge Coming</li>
+			<li id="fullStack" class="coming">30DaysOfFullStack Challenge Coming</li>
+			<li id="dataAnalysis" class="coming">30DaysOfDataAnalysis Challenge Coming</li>
+			<li id="reactNative" class="coming">30DaysOfReactNative Challenge Coming</li>
+			<li id="machineLearning" class="coming">30DaysOfMachineLearning Challenge Coming</li>
 		</ul>
+	</div>
+	<div>
+		<p id="firstParagraph">Paragraph 1</p>
+		<p id="secondParagraph">Paragraph 2</p>
+		<p id="thirdParagraph">Paragraph 3</p>
+		<p id="fourthParagraph">Paragraph 4</p>
 	</div>
 	<script src="./scripts/main.js"></script>
 
