--- a/22_Day_Manipulating_DOM_object/22_day_starters/project_3/index.html
+++ b/22_Day_Manipulating_DOM_object/22_day_starters/project_3/index.html
@@ -2,18 +2,140 @@
 <html lang="en">
 
 <head>
-	<title>30DaysOfJavaScript:22 Day: Challenge Info</title>
+	<title>30DaysOfJavaScript:21 Day </title>
 </head>
 
 <body>
 	<div class="wrapper">
+		<h1>Asabeneh Yetayeh challenges in <span id="year">2020</span></h1>
+		<h2 id="30days">30DaysOfJavaScript Challenge</h2>
+		<div class="date-time"></div>
+		<ul>
+			<li id="python" class="completed">30DaysOfPython <details>
+				<summary>Python</summary>
+				<ul style="list-style: none;">
+					<li>
+						Python 1
+					</li>
+					<li>
+						Python 2
+					</li>
+					<li>
+						Python 3
+					</li>
+					<li>
+						Python 4
+					</li>
+				</ul>
+			</details> Done</li>
+			<li id="javaScript" class="ongoing">30DaysOfJavaScript <details>
+				<summary>JavaScript</summary>
+				<ul style="list-style: none;">
+					<li>
+						JavaScript 1
+					</li>
+					<li>
+						JavaScript 2
+					</li>
+					<li>
+						JavaScript 3
+					</li>
+					<li>
+						JavaScript 4
+					</li>
+				</ul>
+			</details> Ongoing</li>
+			<li id="react" class="coming">30DaysOfReact <details>
+				<summary>React</summary>
+				<ul style="list-style: none;">
+					<li>
+						React 1
+					</li>
+					<li>
+						React 2
+					</li>
+					<li>
+						React 3
+					</li>
+					<li>
+						React 4
+					</li>
+				</ul>
+			</details> Coming</li>
+			<li id="fullStack" class="coming">30DaysOfFullStack <details>
+				<summary>FullStack</summary>
+				<ul style="list-style: none;">
+					<li>
+						FullStack 1
+					</li>
+					<li>
+						FullStack 2
+					</li>
+					<li>
+						FullStack 3
+					</li>
+					<li>
+						FullStack 4
+					</li>
+				</ul>
+			</details> Coming</li>
+			<li id="dataAnalysis" class="coming">30DaysOfDataAnalysis <details>
+				<summary>Data Analysis</summary>
+				<ul style="list-style: none;">
+					<li>
+						Data Analysis 1
+					</li>
+					<li>
+						Data Analysis 2
+					</li>
+					<li>
+						Data Analysis 3
+					</li>
+					<li>
+						Data Analysis 4
+					</li>
+				</ul>
+			</details> Coming</li>
+			<li id="reactNative" class="coming">30DaysOfReactNative <details>
+				<summary>React Native</summary>
+				<ul style="list-style: none;">
+					<li>
+						React Native 1
+					</li>
+					<li>
+						React Native 2
+					</li>
+					<li>
+						React Native 3
+					</li>
+					<li>
+						React Native 4
+					</li>
+				</ul>
+			</details> Coming</li>
+			<li id="machineLearning" class="coming">30DaysOfMachineLearning <details>
+				<summary>Machine Learning</summary>
+				<ul style="list-style: none;">
+					<li>
+						Machine Learning 1
+					</li>
+					<li>
+						Machine Learning 2
+					</li>
+					<li>
+						Machine Learning 3
+					</li>
+					<li>
+						Machine Learning 4
+					</li>
+				</ul>
+			</details> Coming</li>
+		</ul>
 	</div>
-
-	<script src="./data/challenges_info.js"></script>
-	<script src="./js/script.js"></script>
+	<div>
+	</div>
+	<script src="./scripts/main.js"></script>
 
 </body>
-
-</html>
 
 </html>
