--- a/22_Day_Manipulating_DOM_object/22_day_starters/project_2/index.html
+++ b/22_Day_Manipulating_DOM_object/22_day_starters/project_2/index.html
@@ -3,26 +3,58 @@
 
 <head>
 	<title>30DaysOfJavaScript:22 Day: World Countries List</title>
+	<style>
+		 body {
+            font-family: sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+        }
+
+        h1 {
+            font-size: 81px;
+        }
+
+        #container {
+            display: grid;
+			grid-template-columns: repeat(6, 1fr);
+			margin: 0 auto;
+			max-width: 1000px;
+            gap: 10px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+        }
+
+        .country-card {
+            display: grid;
+            place-items: center;
+            min-height: 40px;
+            text-align: center;
+            padding: 15px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+
+        .country-card:hover {
+            background-color: #e9e9e9;
+        }
+	</style>
 </head>
 
 <body>
 	<header>
-		<h2>World Countries List</h2>
-
-		<h4 id="total-countries"></h4>
-		<h3>30DaysOfJavaScript:DOM-Day-2</h3>
-		<h3>Author: Asabeneh Yetayeh</h3>
+		<h1>World Countries List</h1>
+		<h2 id="total-countries"></h2>
+		<p>30DaysOfJavaScript:DOM-Day-2</p>
+		<p>Author: Asabeneh Yetayeh</p>
 
 	</header>
-
-	<div class="countries-container">
-		<div class="countries-wrapper">
-
-		</div>
-	</div>
+    
+    <div id="container"></div>
 
 	<script src="./data/countries.js"></script>
-	<script src="./js/script.js"></script>
+	<script src="./scripts/main.js"></script>
 
 </body>
 
