--- a/24_Day_Project_solar_system/24_day_starter/index.html
+++ b/24_Day_Project_solar_system/24_day_starter/index.html
@@ -4,32 +4,70 @@
 <head>
 	<title>Solar System: Document Object Model:30 Days Of JavaScript</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700&display=swap" rel="stylesheet">
+	<style>
+	body{
+        background: url(images/galaxy.gif);
+        text-align: center;
+    }
+    h1{
+        font-family: Arial, Helvetica, sans-serif;
+        color:gray;
+    }
+    input{
+        border-radius: 3px;
+    }
+    select{
+        text-transform: capitalize;
+    }
+    button{
+        border-radius: 3px;
+    }
+    .container{
+        display: grid;
+		gap: 50px;
+		place-items: center;
+        margin-left:auto;
+        margin-right: auto;
+        text-align: center;
+		padding: 50px;
+    }
+    .big{
+        font-size: 50px;
+        color:white;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+	.error {
+		color: white;
+		font-size: 60px;
+	}
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+	</style>
 </head>
 
 <body>
-	<header>
-		<h1>Calculate a weight of an object on a planet</h1>
-
-		<input type="text" id="mass" placeholder="Mass in Kilogram" />
-		<select>
-			<option value='none'>--select planet-- </option>
-		</select>
-		<button>Calculate weight</button>
-
-	</header>
-	<main>
-		<div class="flex-container">
-			<div class="flex-item image">
-				<img src='./images/earth.png' class="planet-image" />
-			</div>
-			<div class="flex-item description"></div>
-
-		</div>
-
-
-	</main>
-
-
+	<h1>Calculate the weight of an object on a planet</h1>
+    <div>
+        <input type="number" placeholder="Mass in Kilograms">
+        <select aria-label="planets">
+			<option value="">--select planet--</option>
+            <option value="mercury">mercury</option>
+            <option value="venus">venus</option>
+            <option value="earth">earth</option>
+            <option value="mars">mars</option>
+            <option value="jupiter">jupiter</option>
+            <option value="saturn">saturn</option>
+            <option value="uranus">uranus</option>
+            <option value="neptune">neptune</option>
+            <option value="pluto">pluto</option>
+        </select>
+        <button>Calculate weight</button>
+    </div>
+    <div class="container">
+		<img src="./images/earth.png" alt="earth"/>
+    </div>
 
 
 
