--- a/25_Day_World_countries_data_visualization_1/25_day_starter/index.html
+++ b/25_Day_World_countries_data_visualization_1/25_day_starter/index.html
@@ -7,31 +7,30 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>World Countries Data</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" />
-	<link rel="stylesheet" href="./css/style.css" />
+	<link rel="stylesheet" href="./style.css" />
+	<link rel="icon" href="./data/icon.webp" />
 </head>
 
 <body>
 	<header id="countries">
-		<h2>World Countries Data</h2>
-		<p class="subtitle"></p>
-		<p class="feedback"></p>
+		<h1>World Countries Data</h1>
+		<p id="length"></p>
 	</header>
 	<main>
-
-		<div class="wrapper">
+	<div class="container">
+		<div class="content">
 			<div class="graph-buttons">
-				<button class="population">Population</button>
-				<button class="languages">Languages</button>
+				<button id="population">Population</button>
+				<button id="languages">Languages</button>
+				<h4 class="graph-title"></h4>
 			</div>
-			<h4 class="graph-title"></h4>
-			<div class="graphs">
-				<div class="graph-wrapper" id="stat"></div>
-			</div>
+			<div  id="graphs"></div>
 		</div>
+	</div>
 	</main>
 
 	<script src="./data/countries_data.js"></script>
-	<script src="./js/main.js"></script>
+	<script src="./scripts/main.js"></script>
 
 </body>
 
