--- a/27_Day_Mini_project_portfolio/27_day_starter/index.html
+++ b/27_Day_Mini_project_portfolio/27_day_starter/index.html
@@ -2,16 +2,35 @@
 <html lang="en">
 
 <head>
-	<title>30DaysOfJavaScript:11 Day </title>
+	<title>Portfolio </title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<h1>30DaysOfJavaScript:11 Day</h1>
-	<h2>Destructuring and Spread</h2>
+	<div class="container">
+		<h1>Sebastians Portfolio</h1>
+		<div class="dynamicDiv">
+			<p id="dynamicContent" class="elementToFadeInAndOut"></p>
+		</div>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas convallis ipsum eu facilisis pellentesque. 
+			Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. 
+			Nunc in ultrices elit, id eleifend augue. In ut imperdiet tellus. Nunc sed erat eros. 
+			Sed efficitur, nisl quis pretium efficitur, mauris ante luctus massa, nec tempor justo nunc in mauris. 
+			Ut rutrum efficitur nulla ut faucibus. <span style="text-decoration: underline;">Nullam sodales</span>, quam ac aliquam varius, 
+			urna risus mollis elit, ac congue ipsum <b>turpis ut lorem.</b> Cras ante eros, fringilla at dolor sed, 
+			imperdiet ultrices purus. Cras viverra, sem eget varius congue, felis magna eleifend nisi, 
+			et varius nibh erat sit amet diam. Mauris porttitor leo vitae massa tincidunt, a pretium dui tincidunt. 
+			Fusce eget nibh tortor. Duis sed tortor leo. Sed convallis placerat nulla, vitae porta massa. 
+			Aliquam eget felis ligula. Sed a convallis mauris.</p>
+		<div class="buttonsDiv">
+			<div class="box">Javascript for everyone</div>
+			<div class="box">30days of python</div>
+			<div class="box">30days of javascript</div>
+		</div>
+		<p>Technologies I master: <span id="technologies"></span></p>
+	</div>
 
-	<script src="./data/countries_data.js"></script>
 	<script src="./scripts/main.js"></script>
-
 </body>
 
 </html>
