--- a/29_Day_Mini_project_animating_characters/29_day_starters/project_1/index.html
+++ b/29_Day_Mini_project_animating_characters/29_day_starters/project_1/index.html
@@ -11,13 +11,12 @@
 		rel="stylesheet">
 	<script src="https://kit.fontawesome.com/ce3e7ed90f.js" crossorigin="anonymous"></script>
 	<title>30Days Of JavaScript: 29 Project 1</title>
+	<link rel="stylesheet" href="./style.css">
 
 </head>
 
 <body>
-	<div>
-
-	</div>
+	<div id="element"></div>
 
 	<script src="./scripts/main.js"></script>
 
